fix bug #38949 (Cannot get xmlns value attribute) add test